# routes/api.php
@@ -20,3 +20,11 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 });
 
 Route::get('/users', [apiControllers::class, 'index']);
+Route::get('/ukm', [apiControllers::class, 'ukm']);
+Route::get('/ukpp', [apiControllers::class, 'ukpp']);
+Route::get('/manajemen-puskesmas', [apiControllers::class, 'manajemen']);
+Route::get('/nasional-mutu', [apiControllers::class, 'nasionalmutu']);
+Route::get('/{id_user}/ukm', [apiControllers::class, 'nilai_ukm']);
+Route::get('/{id_user}/ukpp', [apiControllers::class, 'nilai_ukpp']);
+Route::get('/{id_user}/manajemen-puskesmas', [apiControllers::class, 'nilai_manajemen']);
+Route::get('/{id_user}/nasional-mutu', [apiControllers::class, 'nilai_mutu']);
